# talking_clock_chinese_esp32_s3_box

./: CHANGELOG.md  CMakeLists.txt  README.md  SD_CARD.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/audio_board/: CMakeLists.txt
components/audio_hal/: CMakeLists.txt  audio_hal_adf.c
components/audio_hal/driver/es7148/: es7148.h
components/audio_hal/driver/es7210_adf/: es7210_adf.c  es7210_adf.h
components/audio_hal/driver/es7243/: es7243.c  es7243.h
components/audio_hal/driver/es7243e_adf/: es7243e_adf.c  es7243e_adf.h
components/audio_hal/driver/es8156_adf/: es8156_adf.c  es8156_adf.h
components/audio_hal/driver/es8311_adf/: es8311_adf.c  es8311_adf.h
components/audio_hal/driver/es8374/: es8374.c  es8374.h
components/audio_hal/driver/es8388_adf/: es8388_adf.c  es8388_adf.h  headphone_detect.c
components/audio_hal/driver/tas5805m/: tas5805m.c  tas5805m.h
components/audio_hal/driver/zl38063/: zl38063.h
components/audio_hal/driver/zl38063/api_lib/: vproc_common.c
components/audio_hal/include/: audio_hal_adf.h
components/audio_hal/test/: test_audio_hal.c
components/audio_pipeline/: audio_element.c  audio_pipeline.c
components/audio_sal/: CMakeLists.txt  audio_mem.c  audio_thread.c
components/audio_stream/: CMakeLists.txt  http_stream.c  i2s_stream.c  pwm_stream.c
components/esp-adf-libs/: CMakeLists.txt
components/esp_actions/: CMakeLists.txt
components/esp_event_cast/: esp_event_cast.c
components/esp_peripherals/: CMakeLists.txt  esp_peripherals.c  periph_console.c  periph_sdcard.c
components/i2c_bus/: CMakeLists.txt  i2c_bus.c
components/lvgl/: CMakeLists.txt  lv_conf.h
components/playlist/: playlist.c
components/protocol_examples_common/: Kconfig.projbuild  connect.c  wifi_connect.c
main/: CMakeLists.txt  Kconfig.projbuild
main/app/: DHT22.c  alt_scores.c  helpers.c  ispeak.c  ispeech.c  main.c  play_mp3_control_example.c  sdcard_helper.c  setdatetime.c  settingsdotcom.c  softap_example_main.c  tts_helpers.c
main/font/: number_font_90_4bo.c  numbers_font_90_4bo.c  sim_font_cn1000an_20.c
main/fs/: file_server.c  file_serving_example_common.c  upload_script.html
main/gui/: clock_ui.c  loading_page.c  ui_input_datetime.c
main/include/: alt_scores.h  clock_ui.h  esp32_s3_box_board.h  file_serving_example_common.h  helpers.h  ispeak.h  ispeech.h  (+9 more)
misc/: README.md  task.h  tasks.c
(+34 files in other folders)
